--- a/public/sass/utils/_utils.scss
+++ b/public/sass/utils/_utils.scss
@@ -83,8 +83,16 @@ button.close {
   position: absolute;
 }
 
-.flex-grow {
+.flex-grow-1 {
   flex-grow: 1;
+}
+
+.flex-shrink-1 {
+  flex-shrink: 1;
+}
+
+.flex-shrink-0 {
+  flex-shrink: 0;
 }
 
 .center-vh {
